--- a/坤坤的奇妙旅程.html
+++ b/坤坤的奇妙旅程.html
@@ -7,7 +7,7 @@
 <body>
 kk
 <video width="540" height="360">
-    <source src="https://www.bilibili.com/video/av60756482/" type="video/mp4">
+    <source src="https://www.bilibili.com/video/av60756482/">
 <!--     <source src="https://www.bilibili.com/video/av60756482/" type=""> -->
 </video>
 
