--- a/坤坤的奇妙旅程.html
+++ b/坤坤的奇妙旅程.html
@@ -8,7 +8,7 @@
 kk
     <iframe src="//player.bilibili.com/player.html?aid=60756482&cid=105736404&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 <video width="1500" height="1000">
-    <source src="https://www.bilibili.com/video/av60756482/">
+    <source src="//player.bilibili.com/player.html?aid=60756482&cid=105736404&page=1">
 <!--     <source src="https://www.bilibili.com/video/av60756482/" type=""> -->
 </video>
 
