--- a/坤坤的奇妙旅程.html
+++ b/坤坤的奇妙旅程.html
@@ -5,8 +5,10 @@
 <title>坤坤的奇妙旅程</title>
 </head>
 <body>
-kk
-    <iframe src="//player.bilibili.com/player.html?aid=60756482&cid=105736404&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<div width="1500" height="1000">
+     <iframe src="//player.bilibili.com/player.html?aid=60756482&cid=105736404&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+    </div
+   
 <video width="1500" height="1000">
     <source src="//player.bilibili.com/player.html?aid=60756482&cid=105736404&page=1">
 <!--     <source src="https://www.bilibili.com/video/av60756482/" type=""> -->
