--- a/坤坤的奇妙旅程.html
+++ b/坤坤的奇妙旅程.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div width="1500" height="1000">
-     <iframe src="//player.bilibili.com/player.html?aid=60756482&cid=105736404&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+     <iframe width="1500px" height="1000px" src="//player.bilibili.com/player.html?aid=60756482&cid=105736404&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
     </div
    
 <video width="1500" height="1000">
