--- a/坤坤的奇妙旅程.html
+++ b/坤坤的奇妙旅程.html
@@ -5,7 +5,7 @@
 <title>坤坤的奇妙旅程</title>
 </head>
 <body>
-<iframe width="1000px" height="666px" src="//player.bilibili.com/player.html?aid=60756482&cid=105736404&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
+<iframe width="1000px" height="666px" src="//player.bilibili.com/player.html?aid=60756482&cid=105736404&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="false"> </iframe>
   
    
 
