--- a/坤坤的奇妙旅程.html
+++ b/坤坤的奇妙旅程.html
@@ -5,11 +5,8 @@
 <title>坤坤的奇妙旅程</title>
 </head>
 <body>
-<iframe width="1000px" height="666px" src="//player.bilibili.com/player.html?aid=60756482&cid=105736404&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="false"> </iframe>
-  
-   
 
-</video>
+  <iframe src="//player.bilibili.com/player.html?aid=52081197&cid=91171487&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
 
 </body>
 </html>
