--- a/坤坤的奇妙旅程.html
+++ b/坤坤的奇妙旅程.html
@@ -5,7 +5,7 @@
 <title>坤坤的奇妙旅程</title>
 </head>
 <body>
- <audio>
+ <audio controls>
   <source src="鸡你太美.mp3" type="audio/mp3>
  </audio>
   <iframe width="700" height="450" src="//player.bilibili.com/player.html?aid=52081197&cid=91171487&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
