--- a/坤坤的奇妙旅程.html
+++ b/坤坤的奇妙旅程.html
@@ -6,7 +6,7 @@
 </head>
 <body>
  <audio controls>
-  <source src="鸡你太美.mp3" type="audio/mp3>
+  <source src="鸡你太美.mp3" type="audio/mp3">
  </audio>
   <iframe width="700" height="450" src="//player.bilibili.com/player.html?aid=52081197&cid=91171487&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>
   <iframe width="700" height="450" src="//player.bilibili.com/player.html?aid=53567591&cid=93709753&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>"
