--- a/坤坤的奇妙旅程.html
+++ b/坤坤的奇妙旅程.html
@@ -12,3 +12,22 @@
   <iframe width="700" height="450" src="//player.bilibili.com/player.html?aid=53567591&cid=93709753&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe>"
 </body>
 </html>
+<audio id="voice" src="鸡你太美.mp3"></audio>
+<p class="but">播放</p>
+
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function() {
+        var voice = document.getElementById('voice'); //获取到audio元素
+          $('.but').click(function() { //点击文字事件
+            if (voice.paused) { //判断音乐是否在播放中，暂停状态
+                voice.play(); //音乐播放
+                $('.but').text('暂停'); //切换文字
+                 
+            } else { //播放状态
+                voice.pause(); //音乐停止
+                $('.but').text('播放'); //切换文字
+            }
+        });
+     });
+</script>
