--- a/坤坤的奇妙旅程.html
+++ b/坤坤的奇妙旅程.html
@@ -20,7 +20,7 @@
           $('.but').click(function() { //点击文字事件
             if (voice.paused) { //判断音乐是否在播放中，暂停状态
                 voice.play(); //音乐播放
-                $('.but').text('你是蔡徐坤'); //切换文字
+                $('.but').text('你是坤坤'); //切换文字
                  
             } else { //播放状态
                 voice.pause(); //音乐停止
